syntax = "proto3";

package auth;

option go_package = "./auth";

message GetAuthorizationRequest {
  string token = 1;
}

message GetAuthorizationResponse {
  int64 user_id = 1;
  string member_no = 2;
  string nik = 3;
  string role = 4;
  string full_name = 5;
  string birth_date = 6;
  string birth_place = 7;
  string gender = 8;
  string religion = 9;
  string married_status = 10;
  string full_address = 11;
  int64 prov_code = 12;
  int64 kab_code = 13;
  int64 kec_code = 14;
  int64 kel_code = 15;
  string email = 16;
  string phone_number = 17;
}

message GetTPSDataByTPSIDRequest {
  int64 tps_id = 1;
}

message GetTPSDataByAreaRequest {
  int32 prov_code = 3;
  int32 kab_code = 4;
  int32 kec_code = 5;
  int32 kel_code = 6;
}

message GetTPSResponse {
  int64 tps_id = 1;
  int32 tps_no = 2;
  int32 prov_code = 3;
  int32 kab_code = 4;
  int32 kec_code = 5;
  int32 kel_code = 6;
}

message ArrayGetTPSResponse {
  repeated GetTPSResponse tps = 1;
}

message UpdateDPRTRequest {
  string member_no = 1;
  int32 prov_code = 1;
  int32 kab_code = 2;
  int32 kec_code = 3;
  int32 kel_code = 4;
}

message DeleteDPRTRequest {
  string member_no = 1;
}

message DPRTResponse {
  string member_no = 1;
}

service DetailMemberService {
  rpc GetAuthorization(GetAuthorizationRequest) returns(GetAuthorizationResponse) {};
}

service SaksiManagementService {
  rpc GetTPSData(GetAuthorizationRequest) returns(GetTPSResponse) {};
  rpc GetTPSDataByTPSID(GetTPSDataByTPSIDRequest) returns(GetTPSResponse) {};
  rpc GetTPSDataByArea(GetTPSDataByAreaRequest) returns(ArrayGetTPSResponse) {};
  rpc CreateDPRT(UpdateDPRTRequest) returns(DPRTResponse) {};
  rpc UpdateDPRT(UpdateDPRTRequest) returns(DPRTResponse) {};
  rpc DeleteDPRT(DeleteDPRTRequest) returns(DPRTResponse) {};
}
